feat: v0.3 - Transparency Logs, Domain Validation, Async Processing
Features:
- Transparency Logs: Merkle tree implementation with inclusion proofs
- Domain Validation: WHOIS and DNS TXT challenge validation framework
- Async Processing: Background task framework
- Log Browser UI: New transparency log tab in Web UI

Technical:
- New modules: atr/transparency, atr/validation, atr/background
- API endpoints: /v1/log/entries, /v1/log/entries/{index}, /v1/log/entries/{index}/proof, /v1/log/root
- Automatic transparency log integration with audit events
- Domain validation integrated into agent registration (optional)
- Updated configuration with v0.3 settings
- Version updated to 0.3.0

All tests passing (13/13)

--- a/atr/static/index.html
+++ b/atr/static/index.html
@@ -326,6 +326,28 @@
                 </div>
                 <button class="btn" onclick="verifyCertificate()">Verify Certificate</button>
             </div>
+
+            <!-- Transparency Log Tab -->
+            <div id="transparency-tab" class="hidden">
+                <h2>Transparency Log</h2>
+                <div style="margin-bottom: 20px;">
+                    <div class="info" style="background: #e3f2fd; padding: 15px; border-radius: 5px; margin-bottom: 15px;">
+                        <strong>Latest Root Hash:</strong> <span id="log-root-hash" style="font-family: monospace;">Loading...</span>
+                    </div>
+                    <div class="filters">
+                        <input type="text" id="log-filter-agent" placeholder="Filter by agent name...">
+                        <select id="log-filter-event">
+                            <option value="">All Events</option>
+                            <option value="register">Register</option>
+                            <option value="rotate">Rotate</option>
+                            <option value="revoke">Revoke</option>
+                            <option value="verify">Verify</option>
+                        </select>
+                        <button class="btn" onclick="loadLogEntries()">Refresh</button>
+                    </div>
+                </div>
+                <div id="log-entries-container"></div>
+            </div>
         </div>
     </div>
 
@@ -359,6 +381,8 @@
             // Load data if needed
             if (tabName === 'agents') {
                 loadAgents();
+            } else if (tabName === 'transparency') {
+                loadLogEntries();
             }
         }
 
